open rewrite updates (#419)